--- a/style/media.css
+++ b/style/media.css
@@ -31,6 +31,9 @@
         width: 100%;
         object-fit: cover;
     }
+    .header__title{
+        padding: 16px 16px;
+    }
 }
 
 @media(max-width:576px){
